--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,16 @@
     <title>Express switch</title>
   </head>
   <body>
-    <label for="article">Tapez votre article :</label>
-    <input type="text" id="article" value="">
+    <form action="/post/article" method="post">
+      <label for="article">Titre</label>
+      <br>
+      <input type="text" id="article" name="title" value="Title 1">
+      <br>
+      <label for="contenue">Contenue</label>
+      <br>
+      <textarea id="contenue" name="content" rows="8" cols="80">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, ex, saepe! Soluta, id pariatur sit aliquid nobis hic. Provident rem, ipsam. Reprehenderit, officiis dolorem accusantium.</textarea>
+      <button type="submit"> send</button>
+    </form>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
