--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Express switch</title>
-  </head>
-  <body>
-    <form action="/post/article" method="post">
-      <label for="article">Titre</label>
-      <br>
-      <input type="text" id="article" name="title" value="Title 1">
-      <br>
-      <label for="contenue">Contenue</label>
-      <br>
-      <textarea id="contenue" name="content" rows="8" cols="80">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, ex, saepe! Soluta, id pariatur sit aliquid nobis hic. Provident rem, ipsam. Reprehenderit, officiis dolorem accusantium.</textarea>
-      <button type="submit"> send</button>
-    </form>
+<html lang="en">
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Express Switch</title>
+</head>
+
+<body>
+    <a href="formulaire.html">Articles</a><br />
+    <select id="deroul">
+		<option selected>Quel article?</option>
+	</select>
+    <span id="receiver"></span>
+    <!-- <form action="submit" id="form">
+		<input type="text" placeholder="name">
+		<input type="text" placeholder="last-name">
+		<input type="text" placeholder="role">
+		<input type="text" placeholder="E-mail">
+	</form><br>
+	<button id="submit">Submit</button>-->
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+</body>
+
 </html>
